--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
             <div class="slide"><div class="content-overlay">
                 <h2>📋 行李勾選清單</h2>
                 <div style="position:relative; z-index:1001;">
-                    <label class="check-item"><input type="checkbox"> 護照 / K-ETA 簽證</label>
-                    <label class="check-item"><input type="checkbox"> WOWPASS 卡 / 韓幣現金</label>
-                    <label class="check-item"><input type="checkbox"> 韓國轉接頭 / 網卡</label>
-                    <label class="check-item"><input type="checkbox"> 行動電源 / 常備藥</label>
-                    <label class="check-item"><input type="checkbox"> 空行李箱 (爆買用)</label>
+                    <label class="check-item"><input type="checkbox"> 護照</label>
+                    <label class="check-item"><input type="checkbox"> 韓幣現金</label>
+                    <label class="check-item"><input type="checkbox"> 韓國轉接頭</label>
+                    <label class="check-item"><input type="checkbox"> 行動電源</label>
+                    <label class="check-item"><input type="checkbox"> 網卡</label>
+                    <label class="check-item"><input type="checkbox"> 衣服</label>
+                    <label class="check-item"><input type="checkbox"> 相機</label>
                 </div>
             </div></div>
 
