--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
         body { margin: 0; padding: 0; background-color: #d7ccc8; font-family: 'Noto Sans TC', sans-serif; height: 100vh; overflow: hidden; }
         
         #slider { width: 100vw; height: 100vh; position: relative; overflow: hidden; background: #333; }
-        .slides-wrapper { display: flex; width: 1000%; height: 100%; transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1); }
-        .slide { width: 10%; height: 100%; flex-shrink: 0; position: relative; background-color: var(--paper); }
+        /* 總共 11 頁，寬度 1100% */
+        .slides-wrapper { display: flex; width: 1100%; height: 100%; transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1); }
+        .slide { width: 9.09%; height: 100%; flex-shrink: 0; position: relative; background-color: var(--paper); }
         
-        /* 🖼️ 封面比例調整為 85% */
+        /* 🖼️ 封面與封底：比例與內容方框一致 (85% x 75%) */
         .cover-img { 
             position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            width: 85%; height: auto; max-height: 80%;
-            object-fit: contain; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+            width: 85%; height: 75%; 
+            object-fit: contain; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+            background-color: #fff; /* 避免透明圖顯示背景色 */
         }
 
-        /* 📋 固定方框：85% 寬度與 75% 高度 */
+        /* 📋 固定方框比例 85% x 75% */
         .content-overlay { 
             position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
             width: 85%; height: 75%; 
@@ -41,12 +43,12 @@
         li b { color: #000; }
         .flight-card { background: #fffef0; border: 1.5px dashed var(--orange); padding: 8px; border-radius: 10px; margin-bottom: 10px; font-size: 13px; text-align: center; }
 
-        /* 導航點擊區縮小至 10%，避免擋住勾選 */
+        /* 導航點擊區縮小至 10%，確保不擋住中間內容 */
         .nav-btn { position: absolute; top: 0; width: 10%; height: 100%; z-index: 100; cursor: pointer; }
         .next-btn { right: 0; } .prev-btn { left: 0; }
-        .dots { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); display: flex; gap: 5px; z-index: 101; }
-        .dot { width: 6px; height: 6px; background: rgba(255,255,255,0.3); border-radius: 50%; }
-        .dot.active { background: var(--orange); width: 15px; border-radius: 10px; }
+        .dots { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); display: flex; gap: 4px; z-index: 101; }
+        .dot { width: 5px; height: 5px; background: rgba(255,255,255,0.3); border-radius: 50%; }
+        .dot.active { background: var(--orange); width: 12px; border-radius: 10px; }
     </style>
 </head>
 <body>
@@ -58,23 +60,31 @@
             <div class="slide"><img src="JEJU.png" class="cover-img"></div>
 
             <div class="slide"><div class="content-overlay">
-                <h2>✈️ 航班 & 準備</h2>
+                <h2>✈️ 航班資訊</h2>
                 <div class="flight-card">去程 IT 654 | <b>06:40 - 09:50</b></div>
                 <div class="flight-card">回程 IT 655 | <b>11:45 - 12:55</b></div>
+                <p style="text-align:center; color:#888; font-size:12px;">(左滑查看行李清單)</p>
+            </div></div>
+
+            <div class="slide"><div class="content-overlay">
+                <h2>📋 行李勾選清單</h2>
                 <label class="check-item"><input type="checkbox"> 護照 / K-ETA 簽證</label>
                 <label class="check-item"><input type="checkbox"> WOWPASS / 韓幣現金</label>
                 <label class="check-item"><input type="checkbox"> 轉接頭 / 網卡 / 行動電源</label>
+                <label class="check-item"><input type="checkbox"> 個人藥品 / 盥洗用品</label>
                 <label class="check-item"><input type="checkbox"> 爆買用的空行李箱</label>
             </div></div>
 
             <div class="slide"><div class="content-overlay">
-                <h2>Day 1 北區掃貨</h2>
-                <a href="https://naver.me/G8tU3GqI" class="nav-tag" target="_blank">📍 海景麥當勞 (限定品)</a>
+                <h2>Day 1 北區登陸</h2>
+                <a href="https://naver.me/G8tU3GqI" class="nav-tag" target="_blank">📍 海景麥當勞</a>
+                <a href="https://naver.me/9UP_Je_j" class="nav-tag" target="_blank">📍 umu 布丁</a>
                 <ul>
-                    <li><b>09:00</b> 落地 ➔ 行李寄存機場櫃檯</li>
+                    <li><b>09:00</b> 落地 ➔ 寄存機場櫃檯</li>
                     <li><b>11:00</b> 東門市場午餐 ➔ <b>umu 布丁</b></li>
+                    <li><b>12:30</b> <b>海景麥當勞</b> (限定漢堡)</li>
                     <li><b>13:00</b> 蓮洞商圈 Olive Young 掃貨</li>
-                    <li><b>15:30</b> Audrant Bakery 買蒜香麵包</li>
+                    <li><b>15:30</b> Audrant Bakery 蒜香麵包</li>
                     <li><b>18:30</b> 咸德飯店 Check-in</li>
                     <li><b>20:00</b> <b>熟成到</b>黑豬肉晚餐 🐷</li>
                 </ul>
@@ -82,11 +92,12 @@
 
             <div class="slide"><div class="content-overlay">
                 <h2>Day 2 文創美拍</h2>
-                <a href="https://naver.me/FvWqXqXq" class="nav-tag" target="_blank">📍 倫敦貝果 (抽號)</a>
+                <a href="https://naver.me/FvWqXqXq" class="nav-tag" target="_blank">📍 倫敦貝果</a>
+                <a href="https://naver.me/MdmvQxbl" class="nav-tag" target="_blank">📍 Hugely Jeju</a>
                 <ul>
                     <li><b>11:30</b> 海女飯卷 (鮑魚飯卷/拉麵)</li>
-                    <li><b>13:30</b> 咸德文創街 & 橘子紀念品</li>
-                    <li><b>15:30</b> 倫敦貝果 ➔ 逛 Object 客製化</li>
+                    <li><b>13:30</b> 咸德文創街 ➔ 橘子紀念品店</li>
+                    <li><b>15:30</b> 倫敦貝果 (抽號) ➔ 逛 Object</li>
                     <li><b>17:30</b> <b>Hugely Jeju</b> 拍 3D 橘子 🍊</li>
                 </ul>
             </div></div>
@@ -97,20 +108,20 @@
                 <ul>
                     <li><b>09:00</b> 咸德鮑魚粥 ➔ 城山港</li>
                     <li><b>11:00</b> 牛島 Udo 租電動車環島</li>
-                    <li><b>12:30</b> Meohamen 吃超誇張海鮮拉麵</li>
+                    <li><b>12:30</b> Meohamen 吃海鮮拉麵 🐙</li>
                     <li><b>15:00</b> 涉地可支絕美海景與燈塔</li>
-                    <li><b>19:00</b> 西歸浦飯店 Check-in</li>
+                    <li>晚上抵達西歸浦飯店 Check-in</li>
                 </ul>
             </div></div>
 
             <div class="slide"><div class="content-overlay">
                 <h2>Day 4 三麗鷗</h2>
-                <a href="https://naver.me/x6f6f6f6" class="nav-tag" target="_blank">📍 三麗鷗主題樂園</a>
+                <a href="https://naver.me/x6f6f6f6" class="nav-tag" target="_blank">📍 三麗鷗樂園</a>
                 <ul>
-                    <li><b>10:30</b> Ein 濟州 Bat 橘子園咖啡廳</li>
+                    <li><b>10:30</b> Ein 濟州 Bat 橘子咖啡廳</li>
                     <li><b>14:00</b> 三麗鷗 Hello Kitty Island</li>
                     <li><b>18:30</b> 西歸浦每日偶來市場</li>
-                    <li><b>20:30</b> <b>亂打秀 (Nanta)</b> 精彩表演 🎭</li>
+                    <li><b>20:30</b> <b>亂打秀 (Nanta)</b> 🎭</li>
                 </ul>
             </div></div>
 
@@ -119,29 +130,29 @@
                 <a href="https://naver.me/5LANKOqH" class="nav-tag" target="_blank">📍 Merci 濟州香水</a>
                 <ul>
                     <li><b>09:00</b> 行李托運至市區飯店</li>
-                    <li><b>11:00</b> 大靜邑海岸路尋找野生海豚</li>
-                    <li><b>14:30</b> 涯月 Merci Jeju 買限定香水</li>
+                    <li><b>11:00</b> 大靜邑海岸路尋野生海豚 🐬</li>
+                    <li><b>14:30</b> 涯月 Merci Jeju 買香水 🍊</li>
                     <li><b>16:00</b> 漢潭散步路 ➔ 彩虹防波堤</li>
-                    <li><b>19:00</b> E-Mart/樂天超市最後採購</li>
+                    <li><b>19:00</b> 樂天超市/E-Mart 最後爆買</li>
                 </ul>
             </div></div>
 
             <div class="slide"><div class="content-overlay">
                 <h2>Day 6 歸途</h2>
                 <ul>
-                    <li><b>09:00</b> 最後打包行李清點</li>
+                    <li><b>08:30</b> 最後行李打包確認</li>
                     <li><b>10:30</b> 前往機場辦理退稅</li>
-                    <li><b>11:45</b> IT 655 起飛 ➔ 台北</li>
-                    <li>濟州旅行圓滿結束！🍊</li>
+                    <li><b>11:45</b> IT 655 起飛回家 ✈️</li>
+                    <li>See You Next Time Jeju! 🍊</li>
                 </ul>
             </div></div>
 
             <div class="slide"><div class="content-overlay">
-                <h2>📝 旅遊備註</h2>
+                <h2>📝 小提醒</h2>
                 <ul>
-                    <li>記得下載 Naver Map</li>
-                    <li>Papago 翻譯機準備好</li>
-                    <li>每天多喝濟州橘子汁 🍊</li>
+                    <li>記得帶帽子擋海風 🧢</li>
+                    <li>下載 Naver Map 並存景點</li>
+                    <li>準備好 Papago 翻譯 App</li>
                 </ul>
             </div></div>
 
@@ -151,7 +162,7 @@
     </div>
 
     <script>
-        let currentIdx = 0; const totalSlides = 10;
+        let currentIdx = 0; const totalSlides = 11;
         const wrapper = document.getElementById('wrapper');
         const dotsContainer = document.getElementById('dots');
         for (let i = 0; i < totalSlides; i++) {
