--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h2>✈️ 航班資訊</h2>
                 <div class="flight-card">去程 IT 654 | <b>06:40 - 09:50</b></div>
                 <div class="flight-card">回程 IT 655 | <b>11:45 - 12:55</b></div>
-                <p style="text-align:center; color:#888; font-size:12px;">(左滑查看行李清單)</p>
+                <p style="text-align:center; color:#888; font-size:12px;"></p>
             </div></div>
 
             <div class="slide"><div class="content-overlay">
