--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             --orange: #FF8C00; 
             --paper: #ffffff; 
             --text: #333; 
-            --bg-cream: #E9E3CE; /* 改為奶油色背景 */
+            --bg-cream: #d7ccc8; /* 改為奶油色背景 */
             --header-bg: #fff9f0; 
         }
         
