--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         .header-tags { display: flex; flex-direction: column; align-items: flex-end; gap: 6px; }
         .nav-tag { 
             text-decoration: none; background: rgba(255, 255, 255, 0.9); color: #f57f17; padding: 4px 10px; 
-            border-radius: 12px; font-weight: 700; border: 1.5px solid #ffcc80; 
+            border-radius: 12px; font-weight: 700; 
             font-size: 11px; white-space: nowrap;
         }
 
