Update link for 'umu' in Day 1 header tags

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="slide"><div class="content-overlay">
                 <div class="day-header">
                     <div class="day-label">Day 1</div>
-                    <div class="header-tags"><a href="https://naver.me/G8tU3GqI" class="nav-tag" target="_blank">📍 麥當勞</a><a href="https://naver.me/9UP_Je_j" class="nav-tag" target="_blank">📍 umu</a></div>
+                    <div class="header-tags"><a href="https://naver.me/G8tU3GqI" class="nav-tag" target="_blank">📍 麥當勞</a><a href="https://naver.me/xEx83qoz" class="nav-tag" target="_blank">📍 umu</a></div>
                 </div>
                 <div class="scroll-content">
                     <ul>
