--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="slide"><div class="content-overlay">
                 <div class="day-header">
                     <div class="day-label">Day 1</div>
-                    <div class="header-tags"><a href="https://naver.me/G8tU3GqI" class="nav-tag" target="_blank">📍 麥當勞</a><a href="https://naver.me/xEx83qoz" class="nav-tag" target="_blank">📍 umu</a></div>
+                    <div class="header-tags"><a href="https://naver.me/xEx83qoz" class="nav-tag" target="_blank">📍 麥當勞</a><a href="https://naver.me/5iTd9wys" class="nav-tag" target="_blank">📍 umu</a></div>
                 </div>
                 <div class="scroll-content">
                     <ul>
@@ -146,7 +146,7 @@
             <div class="slide"><div class="content-overlay">
                 <div class="day-header">
                     <div class="day-label">Day 2</div>
-                    <div class="header-tags"><a href="https://naver.me/FvWqXqXq" class="nav-tag" target="_blank">📍 倫敦貝果</a><a href="https://naver.me/MdmvQxbl" class="nav-tag" target="_blank">📍 Hugely</a></div>
+                    <div class="header-tags"><a href="https://naver.me/x3jFhsyC" class="nav-tag" target="_blank">📍 倫敦貝果</a><a href="https://naver.me/GctrIpZ3" class="nav-tag" target="_blank">📍 Hugely</a></div>
                 </div>
                 <div class="scroll-content">
                     <ul>
@@ -161,7 +161,7 @@
             <div class="slide"><div class="content-overlay">
                 <div class="day-header">
                     <div class="day-label">Day 3</div>
-                    <div class="header-tags"><a href="https://naver.me/5fP8P8P8" class="nav-tag" target="_blank">📍 Meohamen</a></div>
+                    <div class="header-tags"><a href="https://naver.me/FgHlKYBt" class="nav-tag" target="_blank">📍 Meohamen</a></div>
                 </div>
                 <div class="scroll-content">
                     <ul>
@@ -176,7 +176,7 @@
             <div class="slide"><div class="content-overlay">
                 <div class="day-header">
                     <div class="day-label">Day 4</div>
-                    <div class="header-tags"><a href="https://naver.me/x6f6f6f6" class="nav-tag" target="_blank">📍 三麗鷗</a></div>
+                    <div class="header-tags"><a href="https://naver.me/FCA8vgqb" class="nav-tag" target="_blank">📍 三麗鷗</a></div>
                 </div>
                 <div class="scroll-content">
                     <ul>
